# hsrb_teleop

hsrb_joystick_teleop/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
hsrb_joystick_teleop/config/: joystick_control_config.yaml  joystick_control_dualshock4_config.yaml  test_joystick_control_config.yaml  test_no_control_config.yaml
hsrb_joystick_teleop/hsrb_joystick_teleop/: joystick_control.py  joystick_control_node.py  utils.py
hsrb_joystick_teleop/launch/: hsrb_joystick_control.launch.py
hsrb_joystick_teleop/test/: test_node.py
hsrb_pseudo_endeffector_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
hsrb_pseudo_endeffector_controller/launch/: hsrb_pseudo_endeffector_controller.launch.py  hsrc_pseudo_endeffector_controller.launch.py
hsrb_pseudo_endeffector_controller/src/: hsrb_pseudo_endeffector_controller.cpp  hsrb_pseudo_endeffector_controller.hpp  node.cpp
hsrb_pseudo_endeffector_controller/test/: hsrb_pseudo_endeffector_controller-test.cpp
